--- a/src/templates/administracion/crear_usuario.html
+++ b/src/templates/administracion/crear_usuario.html
@@ -1,5 +1,6 @@
 {% extends 'dashboard/base_dashboard.html' %}
 {% load static %}
+{% load l10n %}
 
 {% block title %}Crear Usuario - Admin{% endblock %}
 
