--- a/src/templates/administracion/crear_curso.html
+++ b/src/templates/administracion/crear_curso.html
@@ -1,4 +1,6 @@
 {% extends 'dashboard/base_dashboard.html' %}
+{% load l10n %}
+{% load static %}
 
 {% block title %}Crear Curso - Panel Administrador{% endblock %}
 
