--- a/src/templates/cursos_por_polo.html
+++ b/src/templates/cursos_por_polo.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load l10n %}
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -875,7 +876,7 @@
                                 {% elif comision.cupo_lleno %}
                                     <button class="btn-more" style="display: block; width: 100%; text-align: center; background: #94a3b8; cursor: not-allowed; border: none;" disabled>Cupo lleno</button>
                                 {% else %}
-                                    <a href="{% url 'inscripciones:formulario' comision.id_comision %}" class="btn-more" style="display: block; text-align: center; text-decoration: none;">Inscribirme</a>
+                                    <a href="{% url 'inscripciones:formulario' comision.id_comision|unlocalize %}" class="btn-more" style="display: block; text-align: center; text-decoration: none;">Inscribirme</a>
                                 {% endif %}
                             {% else %}
                                 {% if comision.estado != 'Abierta' %}
@@ -883,7 +884,7 @@
                                 {% elif comision.cupo_lleno %}
                                     <button class="btn-more" style="display: block; width: 100%; text-align: center; background: #94a3b8; cursor: not-allowed; border: none;" disabled>Cupo lleno</button>
                                 {% else %}
-                                    <button onclick="closeCourseModal('{{ curso.id_curso }}'); openLoginModal();" class="btn-more">Iniciar Sesión para Inscribirme</button>
+                                    <button onclick="closeCourseModal('{{ curso.id_curso|unlocalize }}'); openLoginModal();" class="btn-more">Iniciar Sesión para Inscribirme</button>
                                 {% endif %}
                             {% endif %}
                         </div>
